Update chatbot HTML, CSS, JS, server

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-OPENAI_API_KEY=sk-REPLACE_WITH_YOUR_KEY
+# Copy this file to .env locally and fill in your API key
+OPENAI_API_KEY=your_openai_key_here
